<resources>
    <string name="app_name">quickPick</string>
    <string name="welcome_message">Welcome!\nWhat do you want to do?</string>
    <string name="sessions_header">Sessions</string>
    <string name="lists_header">Lists</string>
    <string name="join_session_text">Join Session</string>
    <string name="create_session_text">Create Session</string>
    <string name="view_old_sessions_text">View Old Sessions</string>
    <string name="view_edit_lists_text">View/Edit Lists</string>
    <string name="create_new_list_text">Create New List</string>
    <string name="enter_session_id_title">Enter Session ID</string>
    <string name="add_entries_title">Add Entries:</string>
    <string name="facebook_app_id">822865601801621</string>
    <string name="fb_login_protocol_scheme">fb822865601801621</string>
    <string name="session_id_edit_text_hint">Session ID</string>
    <string name="add_entries_edit_text_hint">Add Entries:</string>
    <string name="dialog_join_button_text">Join</string>
    <string name="dialog_cancel_button_text">Cancel</string>
    <string name="dialog_select_button_text">Select</string>
    <string name="add_this_entry_button_text">Add this entry</string>
    <string name="done_adding_entries_button_text">Done</string>
    <string name="session_list_text">Select a list</string>
    <string name="start_swiping_button">Start Swiping!</string>
    <string name="session_code_string_format">Session Code: %s</string>
    <string name="session_user_count_format">User Count: %d</string>
    <string name="dislike_button_attribute_text">dislike button</string>
    <string name="like_button_attribute_text">like button</string>
    <string name="reject_text">Reject</string>
    <string name="accept_text">Accept</string>
    <string name="description_of_idea_text">description of idea</string>
    <string name="return_to_main_activity_button_text">Return to Main Menu</string>
    <string name="quick_text">quick</string>
    <string name="pick_text">Pick</string>
    <string name="selected_list_text">Selected List</string>
    <string name="select_list_cancelled">Did not select new list</string>
    <string name="select_list_failed">List update failed, try again</string>
    <string name="get_list_failed">Failed to get list for swiping</string>
    <string name="get_lists_failed">Failed to get lists</string>
    <string name="invalid_code">Invalid code</string>
    <string name="create_list_title_prompt_text">Please enter the following fields\nfor your custom list:</string>
    <string name="create_list_name_prompt">Name:</string>
    <string name="create_list_name_edit_text_string">Enter name here</string>
    <string name="create_list_description_edit_text_string">Enter description here</string>
    <string name="create_list_description_name_prompt">Description:</string>
    <string name="create_list_add_entries_button_text">Add Entries</string>
    <string name="create_list_button">Create List</string>
    <string name="create_list_entries_text">Entries:</string>
    <string name="logout">Logout</string>
    <string name="missing_list">Select a list first!</string>
    <string name="rv_entries_delete_button_text">x</string>
    <string name="rv_description_hint">Description:</string>
    <string name="rv_entry_hint">Entry:</string>
</resources>
