<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewListActivity">


    <TextView
        android:id="@+id/create_list_title_prompt"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:text="@string/create_list_title_prompt_text"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/create_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_list_name_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_list_title_prompt"
        app:layout_constraintVertical_bias="0.120000005" />

    <EditText
        android:id="@+id/create_list_name_exit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="506dp"
        android:hint="@string/create_list_name_edit_text_string"
        android:inputType="text"
        android:autofillHints="Name"
    app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_list_name" />

    <TextView
        android:id="@+id/create_list_description_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_list_description_name_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_list_title_prompt"
        app:layout_constraintVertical_bias="0.42000002" />

    <EditText
        android:id="@+id/create_list_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_list_description_edit_text_string"
        android:inputType="text"
        android:autofillHints="Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_list_description_name"
        app:layout_constraintVertical_bias="0.77" />

    <Button
        android:id="@+id/create_list_add_entries_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_list_add_entries_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_list_title_prompt"
        app:layout_constraintVertical_bias="0.78" />
</androidx.constraintlayout.widget.ConstraintLayout>